# Breeze

.github/workflows/: push-build.yml  release.yml
android/app/src/main/kotlin/com/zephyr/breeze/: MainActivity.kt
ios/: Podfile
ios/Runner/: AppDelegate.swift
lib/page/setting/global/: global_setting.dart
lib/page/setting/real_sr/: real_sr_setting_page.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: upscale.dart
lib/util/real_sr/: real_sr_settings.dart  real_sr_super_resolution.dart
macos/: Podfile
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: mod.rs  upscale.rs
script/: build_apk.dart  build_windows.dart
