[package]
name = "windcore"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
image = { version = "0.25.6", default-features = false, features = [
    "jpeg",
    "png",
    "webp",
] }
md5 = "0.8.0"
base64 = "0.22.1"
log = "0.4.27"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
env_logger = "0.11.8"
anyhow = "1.0.98"
dashmap = "6.1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
] }
reqwest_dav = "0.3.3"
url = "2"
tokio-tar = "0.3.1"
zip = { version = "8.2.0", default-features = false, features = [
    "deflate",
    "time",
] }
zhconv = "0.4.1"
lazy_static = "1.5.0"
flate2 = "1.1.9"
zstd = "0.13.3"
rquickjs_playground = { path = "../rquickjs_playground" }
chrono = "0.4.44"
terminal_size = "0.4.4"
ferrous-opencc = "0.3"
brotli = "8.0.2"
sevenz-rust = "0.6.1"
webp = "0.3.1"
serde = { version = "1", features = ["derive"] }
serde-xml-rs = "0.8.2"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
bytemuck = "1"

# ONNX 推理（ort crate load-dynamic，外挂含 EP 的 onnxruntime 动态库；iOS 保留 onnxruntime-objc 不加 ort）
# api-24：onnxruntime API 24 binding，补齐 vitis.rs 缺的 VitisAI 字段（ort rc.12 已知 bug）
# EP feature 按平台开：Windows=directml、Android=nnapi、Linux 暂留 CPU（CUDA 后续）。directml 是
# Windows-only，不能并入 linux target（ort-sys 会拉 DirectML 头/build 脚本导致 Linux 编译失败）。
[target.'cfg(target_os = "windows")'.dependencies]
ort = { version = "2.0.0-rc.12", default-features = false, features = ["load-dynamic", "ndarray", "directml", "api-24"] }

[target.'cfg(target_os = "linux")'.dependencies]
ort = { version = "2.0.0-rc.12", default-features = false, features = ["load-dynamic", "ndarray", "api-24"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15.1"
tracing-logcat = "0.1.0"
jni = "0.22.4"
rustls-platform-verifier = "0.7.0"
ort = { version = "2.0.0-rc.12", default-features = false, features = ["load-dynamic", "ndarray", "nnapi", "api-24"] }

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
oslog = "0.2.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(frb_expand)"] }

[build-dependencies]
ureq = "3.3.0"

[profile.dev]
# 关闭调试符号生成
debug = 0

# 减少中间产物
opt-level = 1

# 减少增量编译生成的碎片文件
incremental = true
